# Heart-Disease-Prediction

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
Data/: heart_disease.db.dvc
Data/transformed_data/: .gitignore  test_heart_disease.parquet.dvc  train_heart_disease.parquet.dvc
app/: main.py
artifacts/: feature_importance.csv  feature_importance.json  preprocessor.pkl  preprocessor.pkl.dvc
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: PredictionForm.jsx
heart_disease_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mlruns/0/: meta.yaml
mlruns/400051342535826825/: meta.yaml
mlruns/400051342535826825/0131ecfe6fcc42ee86f03a9fe9bce699/: meta.yaml
mlruns/400051342535826825/13fd628624c34c71a6e75dbfbde6faeb/: meta.yaml
mlruns/400051342535826825/1846037fa7d84bdab1327ba792fffab9/: meta.yaml
mlruns/400051342535826825/2eec9544825f4648a7152f391af50284/: meta.yaml
mlruns/400051342535826825/504de54604ec42f1adb4a1680ed2b318/: meta.yaml
mlruns/400051342535826825/6a1e6031cdaa4b8e996a753dd9ef5248/: meta.yaml
mlruns/400051342535826825/7d84ce296b544efe81f16566d99725c5/: meta.yaml
mlruns/400051342535826825/8d78cac2d103404eab29424b379f5c31/: meta.yaml
mlruns/425906341288009640/: meta.yaml
notebooks/: Untitled.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_promotion.py  model_training.py
src/pipeline/: predict_pipeline.py  training_pipeline.py
(+121 files in other folders)
